# SauceDemoAutomation

./: Bug Report.docx  README.md  Test Cases.docx  Test plan.docx  login.py  pyproject.toml  swag labs manual test.xlsx
Locators/: locators.py
Pages/: homePage.py  loginPage.py
reports/: TestResults___main__.LoginTest_2025-06-25_20-36-33.html
